# KernelTester

./: CMakeLists.txt  ControlDrawer.qml  KernelView.qml  ToggleControl.qml  cameraview.cpp  cameraview.h  kernelmodel.cpp  kernelmodel.h  main.cpp  main.qml  matview.cpp  matview.h  qml.qrc
